# fbksd

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
cmake/: configure_script.cmake.in  fbksdConfig.cmake  fbksdExport.cmake
doc/doxygen/: Doxyfile  main.md
doc/sphinx/: Makefile  client.rst  conf.py  index.rst
docs/1.0.0/: BenchmarkClient_8h.html  BenchmarkClient_8h_source.html  BenchmarkManager_8h_source.html  BenchmarkServer_8h_source.html  CfgParser_8h_source.html  Point_8h_source.html  RenderClient_8h_source.html  RenderingServer_8h_source.html  SampleLayout_8h_source.html  SamplesPipe_8h_source.html  SceneInfo_8h_source.html  SharedMemory_8h_source.html  annotated.html  classBenchmarkManager-members.html  classBenchmarkManager.html  classBenchmarkServer-members.html  classBenchmarkServer.html  classCurrentPathGuard-members.html  classCurrentPathGuard.html  classRenderClient-members.html  classRenderClient.html  classRenderingServer-members.html  classRenderingServer.html  classSampleBuffer-members.html  classSampleBuffer.html  classSampleLayout-members.html  classSampleLayout.html  classSamplesPipe-members.html  classSamplesPipe.html  classSceneInfo-members.html  classSceneInfo.html  classSharedMemory-members.html  classSharedMemory.html  classes.html  classfbksd_1_1BenchmarkClient-members.html  classfbksd_1_1BenchmarkClient.html  classfbksd_1_1BenchmarkManager-members.html  classfbksd_1_1BenchmarkManager.html  classfbksd_1_1BenchmarkServer-members.html  classfbksd_1_1BenchmarkServer.html  (+65 more)
docs/2.0.0/: BenchmarkClient_8h.html  BenchmarkClient_8h_source.html  BenchmarkManager_8h_source.html  BenchmarkServer_8h_source.html  CfgParser_8h_source.html  Point_8h_source.html  RenderClient_8h_source.html  RenderingServer_8h_source.html  SampleLayout_8h_source.html  SamplesPipe_8h_source.html  SceneInfo_8h_source.html  SharedMemory_8h_source.html  TilePool_8h_source.html  annotated.html  classCurrentPathGuard-members.html  classCurrentPathGuard.html  classes.html  classfbksd_1_1BenchmarkClient-members.html  classfbksd_1_1BenchmarkClient.html  classfbksd_1_1BenchmarkManager-members.html  classfbksd_1_1BenchmarkManager.html  classfbksd_1_1BenchmarkServer-members.html  classfbksd_1_1BenchmarkServer.html  classfbksd_1_1BufferTile-members.html  classfbksd_1_1BufferTile.html  classfbksd_1_1BufferTile_1_1SampleIterator-members.html  classfbksd_1_1BufferTile_1_1SampleIterator.html  classfbksd_1_1RenderClient-members.html  classfbksd_1_1RenderClient.html  classfbksd_1_1RenderingServer-members.html  classfbksd_1_1RenderingServer.html  classfbksd_1_1SPP-members.html  classfbksd_1_1SPP.html  classfbksd_1_1SampleBuffer-members.html  classfbksd_1_1SampleBuffer.html  classfbksd_1_1SampleLayout-members.html  classfbksd_1_1SampleLayout.html  classfbksd_1_1SamplesPipe-members.html  classfbksd_1_1SamplesPipe.html  classfbksd_1_1SceneInfo-members.html  (+57 more)
docs/2.1.0/: BenchmarkClient_8h.html  BenchmarkClient_8h_source.html  BenchmarkManager_8h_source.html  BenchmarkServer_8h_source.html  CfgParser_8h_source.html  Img_8h_source.html  Point_8h_source.html  RenderClient_8h_source.html  RenderingServer_8h_source.html  SampleLayout_8h_source.html  SamplesPipe_8h_source.html  SceneInfo_8h_source.html  SharedMemory_8h_source.html  TilePool_8h_source.html  annotated.html  classCurrentPathGuard-members.html  classCurrentPathGuard.html  classes.html  classfbksd_1_1BenchmarkClient-members.html  classfbksd_1_1BenchmarkClient.html  classfbksd_1_1BenchmarkManager-members.html  classfbksd_1_1BenchmarkManager.html  classfbksd_1_1BenchmarkServer-members.html  classfbksd_1_1BenchmarkServer.html  classfbksd_1_1BufferTile-members.html  classfbksd_1_1BufferTile.html  classfbksd_1_1BufferTile_1_1SampleIterator-members.html  classfbksd_1_1BufferTile_1_1SampleIterator.html  classfbksd_1_1IQA-members.html  classfbksd_1_1IQA.html  classfbksd_1_1Img-members.html  classfbksd_1_1Img.html  classfbksd_1_1RenderClient-members.html  classfbksd_1_1RenderClient.html  classfbksd_1_1RenderingServer-members.html  classfbksd_1_1RenderingServer.html  classfbksd_1_1SPP-members.html  classfbksd_1_1SPP.html  classfbksd_1_1SampleBuffer-members.html  classfbksd_1_1SampleBuffer.html  (+71 more)
docs/2.2.0/: BenchmarkClient_8h.html  BenchmarkClient_8h_source.html  BenchmarkManager_8h_source.html  BenchmarkServer_8h_source.html  CfgParser_8h_source.html  Img_8h_source.html  Point_8h_source.html  RenderClient_8h_source.html  RenderingServer_8h_source.html  SampleLayout_8h_source.html  SamplesPipe_8h_source.html  SceneInfo_8h_source.html  SharedMemory_8h_source.html  TilePool_8h_source.html  annotated.html  classCurrentPathGuard-members.html  classCurrentPathGuard.html  classes.html  classfbksd_1_1BenchmarkClient-members.html  (+91 more)
doxygen/: main.md
src/: fbksd.py.in
src/benchmark/: BenchmarkManager.cpp  BenchmarkManager.h  BenchmarkServer.cpp  BenchmarkServer.h  CMakeLists.txt  CfgParser.cpp  CfgParser.h  RenderClient.cpp  RenderClient.h  exr_utils.h  main.cpp
src/iqa/: CMakeLists.txt  mse.cpp  psnr.cpp  rmse.cpp  ssim.cpp
src/libbenchmark/: BenchmarkManager.cpp  BenchmarkManager.h  BenchmarkServer.cpp  BenchmarkServer.h  CMakeLists.txt  CfgParser.cpp  CfgParser.h  RenderClient.cpp  RenderClient.h  exr_utils.cpp  exr_utils.h  tcp_utils.cpp  tcp_utils.h
src/libclient/: BenchmarkClient.cpp  CMakeLists.txt
src/libcore/: CMakeLists.txt  RPC.cpp  SampleLayout.cpp  SceneInfo.cpp  SharedMemory.cpp
src/libiqa/: CMakeLists.txt  Img.cpp  iqa.cpp
src/libpython/: CMakeLists.txt  client.cpp
src/librenderer/: CMakeLists.txt  RenderingApp.cpp  RenderingApp.h  RenderingAppMain.cpp  RenderingServer.cpp  SamplesPipe.cpp  TilePool.cpp  TilePool.h  samples.cpp
tests/: CMakeLists.txt
tests/core/: TestSceneInfo.cpp  TestSharedMemory.cpp
tests/libbenchmark/: TestBenchmarkManager.cpp
tests/libclient/: TestBenchmarkClient.cpp
tests/libiqa/: TestImg.cpp  TestIqa.cpp
tests/libiqa/data/: ref.exr  test.exr
tests/mock/: AdaptiveClient.cpp  CMakeLists.txt  mockclient.cpp  mockrenderer.cpp
util/: export_path.sh.in  fbksd
(+236 files in other folders)
